--- a/index.html
+++ b/index.html
@@ -275,103 +275,77 @@ Discover the authentic flavors of Northern India with our traditional recipes.
 </div>
 <!-- Salads & Raita -->
 <div id="salads" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Salad & Raita (Yogurt)</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">1.</span> Ensalada Verde / Green Salad</h4>
-<p class="text-sm text-gray-600">
-Lechuga, tomate, pepino y cebolla con aderezo especial
-<br>
-Lettuce, tomato, cucumber and onion with special dressing
-</p>
-</div>
-<span class="font-bold text-primary">4,50€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">2.</span> Kachumber Salad / Ensalada Kachumber</h4>
-<p class="text-sm text-gray-600">
-Tomate, pepino, cebolla y cilantro picados finamente con especias
-<br>
-Finely chopped tomato, cucumber, onion and coriander with spices
-</p>
-</div>
-<span class="font-bold text-primary">5,25€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">3.</span> Plain Raita / Raita Natural</h4>
-<p class="text-sm text-gray-600">
-Yogur natural con comino y cilantro
-<br>
-Natural yogurt with cumin and coriander
-</p>
-</div>
-<span class="font-bold text-primary">3,95€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">4.</span> Cucumber Raita / Raita de Pepino</h4>
-<p class="text-sm text-gray-600">
-Yogur con pepino rallado, comino y menta
-<br>
-Yogurt with grated cucumber, cumin and mint
-</p>
-</div>
-<span class="font-bold text-primary">4,50€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">5.</span> Boondi Raita / Raita Boondi</h4>
-<p class="text-sm text-gray-600">
-Yogur con bolitas crujientes de harina de garbanzo y especias
-<br>
-Yogurt with crispy chickpea flour balls and spices
-</p>
-</div>
-<span class="font-bold text-primary">4,95€</span>
-</div>
-</div>
-</div>
-<!-- Soups -->
-<div id="soups" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sopas / Soups</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">6.</span> Mulligatawny Soup / Sopa Mulligatawny</h4>
-<p class="text-sm text-gray-600">
-Sopa tradicional india con lentejas, verduras y especias
-<br>
-Traditional Indian soup with lentils, vegetables and spices
-</p>
-</div>
-<span class="font-bold text-primary">5,50€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">7.</span> Tomato Soup / Sopa de Tomate</h4>
-<p class="text-sm text-gray-600">
-Sopa cremosa de tomate con un toque de especias indias
-<br>
-Creamy tomato soup with a touch of Indian spices
-</p>
-</div>
-<span class="font-bold text-primary">4,95€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">8.</span> Chicken Soup / Sopa de Pollo</h4>
-<p class="text-sm text-gray-600">
-Caldo de pollo con verduras y especias aromáticas
-<br>
-Chicken broth with vegetables and aromatic spices
-</p>
-</div>
-<span class="font-bold text-primary">5,95€</span>
-</div>
-</div>
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Salad & Raita (Yogurt)</h3>
+  <div class="space-y-6">
+    
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">1.</span> Sartaj special Salad / Sartaj ensalada especial</h4>
+        <p class="text-sm text-gray-600">
+          Chicken tikka pieces along with tomatoes, carrots, boiled egg and yogurt sauce
+          <br>
+          Trozos de pollo tikka junto con tomates, zanahorias, huevo cocido y salsa de yogur
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">2.</span> Indian Salad / Ensalada Indú</h4>
+        <p class="text-sm text-gray-600">
+          Green salad, tomatoes, carrots, onions and cucumber, paprika and mushroom masala sauce
+          <br>
+          Ensalada verde, tomates, zanahorias, cebollas y pepino, pimiento y salsa masala de champiñones
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,50€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">3.</span> Mixed Salad / Ensalada mixta</h4>
+        <p class="text-sm text-gray-600">
+          Green salad, tomatoes, carrots, onions and cucumber showered with paprika
+          <br>
+          Ensalada verde, tomates, zanahorias, cebollas y pepino bañados con pimiento
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,50€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">4.</span> Mixed Raita / Raita Mixta</h4>
+        <p class="text-sm text-gray-600">
+          Chilled homemade yogurt mixed with cucumber, onions, tomato, ginger and fresh coriander
+          <br>
+          Yogur casero frío mezclado con pepino, cebolla, tomate, jengibre y cilantro fresco
+        </p>
+      </div>
+      <span class="font-bold text-primary">2,75€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">5.</span> Pineapple Raita / Raita de piña</h4>
+        <p class="text-sm text-gray-600">
+          Chilled homemade yogurt mixed with pineapple fruit
+          <br>
+          Yogur casero frío mezclado con piña
+        </p>
+      </div>
+      <span class="font-bold text-primary">2,75€</span>
+    </div>
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">6.</span> Aloo Raita / Aloo Raita</h4>
+        <p class="text-sm text-gray-600">
+          Chilled homemade yogurt mixed with potatoes, cumin and fresh coriander
+          <br>
+          Yogur casero frío mezclado con patatas, comino y cilantro fresco
+        </p>
+      </div>
+      <span class="font-bold text-primary">2,75€</span>
+    </div>
+
+  </div>
 </div>
 <!-- Starters -->
 <div id="starters" class="menu-section">
