--- a/index.html
+++ b/index.html
@@ -344,58 +344,265 @@ Discover the authentic flavors of Northern India with our traditional recipes.
       </div>
       <span class="font-bold text-primary">2,75€</span>
     </div>
+  </div>
+</div>
+  <!-- Soups -->
+<div id="soups" class="menu-section">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sopas / Soups</h3>
+  <div class="space-y-6">
+    
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">7.</span> Tomato Soup / Sopa de Tomate</h4>
+        <p class="text-sm text-gray-600">
+          Creamy tomato soup garnished with fresh coriander
+          <br>
+          Sopa cremosa de tomate decorada con cilantro fresco
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,95€</span>
+    </div>
 
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">8.</span> Daal Soup / Sopa Daal</h4>
+        <p class="text-sm text-gray-600">
+          Mildly spiced lentil soup seasoned with cumin, ginger and fresh coriander
+          <br>
+          Sopa de lentejas suavemente especiada con comino, jengibre y cilantro fresco
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,50€</span>
+    </div>
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">9.</span> Chicken Soup / Sopa de Pollo</h4>
+        <p class="text-sm text-gray-600">
+          Aromatic chicken soup with Indian herbs and spices
+          <br>
+          Sopa aromática de pollo con hierbas y especias indias
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,95€</span>
+    </div>
   </div>
 </div>
 <!-- Starters -->
 <div id="starters" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Entrantes / Starters</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">9.</span> Samosas Vegetales / Vegetable Samosas</h4>
-<p class="text-sm text-gray-600">
-Empanadas fritas rellenas de patata, guisantes y especias (2 uds)
-<br>
-Fried pastries filled with potato, peas and spices (2 pcs)
-</p>
-</div>
-<span class="font-bold text-primary">5,95€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">10.</span> Onion Bhaji / Bhaji de Cebolla</h4>
-<p class="text-sm text-gray-600">
-Buñuelos crujientes de cebolla con harina de garbanzo y especias
-<br>
-Crispy onion fritters with chickpea flour and spices
-</p>
-</div>
-<span class="font-bold text-primary">5,50€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">11.</span> Chicken Pakora / Pakora de Pollo</h4>
-<p class="text-sm text-gray-600">
-Trozos de pollo marinados y rebozados en harina de garbanzo
-<br>
-Marinated chicken pieces coated in chickpea flour
-</p>
-</div>
-<span class="font-bold text-primary">6,95€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">12.</span> Mixed Platter / Plato Mixto</h4>
-<p class="text-sm text-gray-600">
-Selección de entrantes variados para compartir (para 2 personas)
-<br>
-Selection of various starters to share (for 2 people)
-</p>
-</div>
-<span class="font-bold text-primary">12,95€</span>
-</div>
-</div>
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Entrantes / Starters</h3>
+  <div class="space-y-6">
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">10.</span> Samosas Vegetales / Vegetable Samosas</h4>
+        <p class="text-sm text-gray-600">
+          Fried pastry stuffed with potatoes and green peas with spices (2 pcs)
+          <br>
+          Empanadillas fritas rellenas de patatas y guisantes verdes con especias (2 uds)
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">11.</span> Onion Bhaji / Bhaji de Cebolla</h4>
+        <p class="text-sm text-gray-600">
+          Sliced onion dipped in chickpea flour and fried
+          <br>
+          Cebolla rebozada en harina de garbanzo y frita
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,50€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">12.</span> Chicken Pakora / Pakora de Pollo</h4>
+        <p class="text-sm text-gray-600">
+          Tender pieces of chicken breast marinated in spices, dipped in chickpea flour and deep fried
+          <br>
+          Trozos de pechuga de pollo marinados en especias, rebozados en harina de garbanzo y fritos
+        </p>
+      </div>
+      <span class="font-bold text-primary">6,95€</span>
+    </div>
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">13.</span> Mixed Platter / Plato Mixto</h4>
+        <p class="text-sm text-gray-600">
+          Combination of vegetable samosas, onion bhaji and chicken pakora (for 2 people)
+          <br>
+          Combinación de samosas de verduras, bhaji de cebolla y pakora de pollo (para 2 personas)
+        </p>
+      </div>
+      <span class="font-bold text-primary">12,95€</span>
+    </div>
+     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">16.</span> Vegetable Pakora / Pakora Vegetal</h4>
+        <p class="text-sm text-gray-600">
+          Fresh chopped vegetables mixed in gram flour batter with herbs and spices and deep fried
+          <br>
+          Verduras frescas picadas mezcladas en masa de harina de garbanzo con hierbas y especias y fritas
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,75€</span>
+    </div>
+    <!-- 17 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">17.</span> Sartaj Mixed Pakora / Sartaj Mixto Pakora</h4>
+        <p class="text-sm text-gray-600">
+          Different kinds of Chef’s special pakoras
+          <br>
+          Diferentes tipos de pakoras especiales del Chef
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,50€</span>
+    </div>
+    <!-- 18 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">18.</span> Paneer (Cheese) Pakora / Pakora de Queso</h4>
+        <p class="text-sm text-gray-600">
+          Cottage cheese mixed in gram flour batter with herbs and spices and deep fried
+          <br>
+          Requesón rebozado con harina de garbanzo con hierbas y especias y frito
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,95€</span>
+    </div>
+    <!-- 19 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">19.</span> Chicken Pakora / Pollo Pakora</h4>
+        <p class="text-sm text-gray-600">
+          Succulent pieces of chicken mixed in gram flour batter with herbs and spices and deep fried
+          <br>
+          Trozos de pollo rebozados en harina de garbanzo con hierbas y especias y fritos
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,95€</span>
+    </div>
+    <!-- 20 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">20.</span> Fish Pakora / Pescado Pakora</h4>
+        <p class="text-sm text-gray-600">
+          Fish pieces mixed in gram flour batter with herbs and spices and deep fried
+          <br>
+          Trozos de pescado rebozados en harina de garbanzo con hierbas y especias y fritos
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,95€</span>
+    </div>
+    <!-- 21 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">21.</span> Onion Kurkura / Cebolla Kurkura</h4>
+        <p class="text-sm text-gray-600">
+          Fried red onion with chickpea flour and Indian spices
+          <br>
+          Cebolla roja frita con harina de garbanzos y especias indias
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,95€</span>
+    </div>
+    <!-- 22 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">22.</span> Prawn Puri / Gamba Puri</h4>
+        <p class="text-sm text-gray-600">
+          Lightly spiced prawns served on crisp Indian fried bread
+          <br>
+          Gambas ligeramente condimentadas servidas en crujiente pan indio frito
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,25€</span>
+    </div>
+    <!-- 23 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">23.</span> Spicy King Prawns / Chili Langostinos</h4>
+        <p class="text-sm text-gray-600">
+          King Prawns cooked in special (hot) Indian spices
+          <br>
+          Langostinos cocidos con especias indias especiales (picantes)
+        </p>
+      </div>
+      <span class="font-bold text-primary">7,25€</span>
+    </div>
+    <!-- 24 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">24.</span> Lasuni (Garlic) Prawns / Gamba con Ajo</h4>
+        <p class="text-sm text-gray-600">
+          Prawns cooked in garlic paste with special Indian spices
+          <br>
+          Gambas cocinadas en pasta de ajo con especias especiales de la India
+        </p>
+      </div>
+      <span class="font-bold text-primary">6,25€</span>
+    </div>
+    <!-- 25 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">25.</span> Aloo Tikki / Aloo Tikki</h4>
+        <p class="text-sm text-gray-600">
+          Potatoes mixed with special Indian herbs and spices & deep fried. Served with chick peas
+          <br>
+          Patatas mezcladas con hierbas y especias indias especiales y fritas. Servido con garbanzos
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,95€</span>
+    </div>
+    <!-- 26 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">26.</span> Chicken Chat / Pollo Chat</h4>
+        <p class="text-sm text-gray-600">
+          Succulent pieces of chicken, spiced with tantalising hot and sour taste served on a crisp Indian nan bread
+          <br>
+          Jugosos trozos de pollo condimentados con un tentador sabor agridulce, servidos en pan indio crujiente
+        </p>
+      </div>
+      <span class="font-bold text-primary">5,50€</span>
+    </div>
+    <!-- 27 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">27.</span> Channa Chat / Chana Chat</h4>
+        <p class="text-sm text-gray-600">
+          Chick peas, spiced with a tantalising hot and sour taste served on a crisp Indian nan bread
+          <br>
+          Garbanzos especiados con un tentador sabor agridulce, servidos en un crujiente pan indio
+        </p>
+      </div>
+      <span class="font-bold text-primary">4,95€</span>
+    </div>
+    <!-- 28 -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">28.</span> Mixed platter for two people / Plato mixto para dos personas</h4>
+        <p class="text-sm text-gray-600">
+          A combination of different types of delicious meat pakoras
+          <br>
+          Combinación de diferentes tipos de deliciosas pakoras de carne
+        </p>
+      </div>
+      <span class="font-bold text-primary">6,50€</span>
+    </div>
+    <!-- 29 -->
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">29.</span> Mixed platter for four people / Plato mixto para cuatro personas</h4>
+        <p class="text-sm text-gray-600">
+          A combination of different types of delicious meat pakoras
+          <br>
+          Combinación de diferentes tipos de deliciosas pakoras de carne
+        </p>
+      </div>
+      <span class="font-bold text-primary">12,95€</span>
+    </div>
+  </div>
 </div>
 <!-- Tandoori -->
 <div id="tandoori" class="menu-section">
