--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@ All our dishes available for takeaway to enjoy at home.
 <div class="text-center mb-16">
 <h2 class="text-4xl font-bold mb-3 text-gray-800 font-['Playfair_Display']">Nuestro Menú / Our Menu</h2>
 <p class="text-gray-600 max-w-2xl mx-auto">
-Descubre los sabores auténticos de la India del norte con nuestras recetas tradicionales.
+Descubre los sabores auténticos de la India con nuestras recetas tradicionales.
 <br>
-Discover the authentic flavors of Northern India with our traditional recipes.
+Discover the authentic flavors of India with our traditional recipes.
 </p>
 </div>
 <!-- Menu Tabs -->
