--- a/index.html
+++ b/index.html
@@ -603,56 +603,208 @@ Discover the authentic flavors of India with our traditional recipes.
     </div>
   </div>
 </div>
-<!-- Tandoori -->
+<!-- Sartaj Tandoori -->
 <div id="tandoori" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sartaj Tandoori</h3>
-<div class="space-y-6">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Sartaj Tandoori</h3>
+  <div class="space-y-6">
+    <!-- 33 Chicken Tikka -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">33.</span> Chicken Tikka / Pollo Tikka</h4>
+        <p class="text-sm text-gray-600">
+          Succulent pieces of chicken marinated in yogurt, aromatic spices and cooked in tandoor
+          <br>
+          Jugosos trozos de pollo marinados en yogur, especias aromáticas y cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>5,95€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,50€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 34 Lamb Tikka -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">34.</span> Lamb Tikka / Cordero Tikka</h4>
+        <p class="text-sm text-gray-600">
+          Succulent pieces of lamb marinated in yogurt, aromatic spices and cooked in tandoor
+          <br>
+          Jugosos trozos de cordero marinados en yogur, especias aromáticas y cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,99€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>12,95€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 35 Kalmi Kebab -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">35.</span> Kalmi Kebab / Kalmi Kebab</h4>
+        <p class="text-sm text-gray-600">
+          Tender pieces of chicken kebab marinated in rich mughlai sauce with aromatic spices and cooked in tandoor
+          <br>
+          Tiernos trozos de kebab de pollo marinados en rica salsa mughlai con especias aromáticas y cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,50€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,99€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 36 Chicken Mint Tikka -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">36.</span> Chicken Mint Tikka / Pollo Menta Tikka</h4>
+        <p class="text-sm text-gray-600">
+          Tender pieces of chicken marinated in yogurt mint paste, aromatic spices and cooked in tandoor
+          <br>
+          Tiernos trozos de pollo marinados en pasta de menta y yogur, especias aromáticas y cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,50€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>12,50€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 37 Lamb Seekh Kebab -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">37.</span> Lamb Seekh Kebab / Cordero Seekh Kebab</h4>
+        <p class="text-sm text-gray-600">
+          Minced lamb mixed with onions, special herbs and spices, skewered and barbecued in tandoor
+          <br>
+          Cordero picado mezclado con cebolla, hierbas y especias especiales, ensartado y asado en tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,50€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>12,99€</span></div>
+        </div>
+    </div>
+  </div>
+   <!-- 40 Chilli Chicken -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">40.</span> Chilli Chicken / Chilli Pollo</h4>
+        <p class="text-sm text-gray-600">
+          Tender pieces of chicken tikka mixed with onion rings, paprika, chopped ginger and cooked in thick hot gravy
+          <br>
+          Tiernos trozos de pollo tikka mezclados con aros de cebolla, pimiento, jengibre picado y cocinados en una salsa espesa y picante
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,25€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,99€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 41 Cheese Chilli -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">41.</span> Cheese Chilli / Queso Chilli</h4>
+        <p class="text-sm text-gray-600">
+          Fresh homemade pieces of cheese mixed with onion rings, paprika, cooked in hot thick gravy
+          <br>
+          Trozos de queso fresco casero mezclado con aros de cebolla, pimiento, cocinados en una salsa espesa y picante
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,50€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,50€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 40 Chicken Malai Tikka -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">40.</span> Chicken Malai Tikka / Pollo Malai Tikka</h4>
+        <p class="text-sm text-gray-600">
+          Supreme of chicken marinated in yogurt & rich cream, cooked in tandoor
+          <br>
+          Suprema de pollo marinada con yogur y rica crema, cocinada al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,99€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>11,99€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 41 Tandoori Mix Grill -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">41.</span> Mixed Grill / Parrillada Mixta</h4>
+        <p class="text-sm text-gray-600">
+          Selection of different types of meats marinated in traditional herbs and spices
+          <br>
+          Selección de diferentes tipos de carnes marinadas en hierbas y especias tradicionales
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>7,99€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>15,50€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 42 Fish Tandoori Tikka -->
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">42.</span> Fish Tandoori Tikka / Pescado Tandoori Tikka</h4>
+        <p class="text-sm text-gray-600">
+          Fish cubes marinated in yogurt, lemon juice and aromatic spices, cooked in tandoor
+          <br>
+          Cubos de pescado marinados en yogur, jugo de limón y especias aromáticas, cocinados al tandoor
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Starter</span> <span>6,50€</span></div>
+          <div class="flex justify-between"><span>Main</span> <span>12,25€</span></div>
+        </div>
+      </div>
+    </div>
+    <!-- 45 Fish Kashmiri Tikka -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">13.</span> Chicken Tikka / Pollo Tikka</h4>
-<p class="text-sm text-gray-600">
-Trozos de pechuga de pollo marinados en yogur y especias, cocinados en horno tandoor
-<br>
-Pieces of chicken breast marinated in yogurt and spices, cooked in tandoor oven
-</p>
+  <div class="flex-grow">
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">45.</span> Fish Kashmiri Tikka / Pescado Kashmiri Tikka</h4>
+    <p class="text-sm text-gray-600">
+      Pieces of fish marinated in green chilli, mint, lemon, Indian spices and cooked in tandoor
+      <br>
+      Trozos de pescado marinados en guindilla verde, menta, limón, especias indias y cocinados al tandoor
+    </p>
+    <div class="mt-2 space-y-1 text-sm">
+      <div class="flex justify-between"><span>Starter</span> <span>6,25€</span></div>
+      <div class="flex justify-between"><span>Main</span> <span>12,25€</span></div>
+    </div>
+  </div>
 </div>
-<span class="font-bold text-primary">10,95€</span>
-</div>
+
+<!-- 46 Paneer Tikka -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">14.</span> Tandoori Chicken / Pollo Tandoori</h4>
-<p class="text-sm text-gray-600">
-Muslos de pollo marinados en yogur y especias, cocinados en horno tandoor
-<br>
-Chicken thighs marinated in yogurt and spices, cooked in tandoor oven
-</p>
+  <div class="flex-grow">
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">46.</span> Paneer (Cheese) Tikka / Paneer (Queso) Tikka</h4>
+    <p class="text-sm text-gray-600">
+      Fresh cottage cheese marinated in yogurt, special herbs and spices
+      <br>
+      Requesón fresco marinado en yogur, hierbas y especias especiales
+    </p>
+    <div class="mt-2 space-y-1 text-sm">
+      <div class="flex justify-between"><span>Starter</span> <span>6,25€</span></div>
+      <div class="flex justify-between"><span>Main</span> <span>11,50€</span></div>
+    </div>
+  </div>
 </div>
-<span class="font-bold text-primary">11,50€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">15.</span> Seekh Kebab / Kebab Seekh</h4>
-<p class="text-sm text-gray-600">
-Brochetas de carne picada de cordero con cebolla, cilantro y especias
-<br>
-Skewers of minced lamb with onion, coriander and spices
-</p>
-</div>
-<span class="font-bold text-primary">12,95€</span>
-</div>
+
+<!-- 47 King Prawn Tandoori -->
 <div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">16.</span> Tandoori Mixed Grill / Parrillada Tandoori Mixta</h4>
-<p class="text-sm text-gray-600">
-Selección de carnes tandoori: pollo tikka, pollo tandoori, seekh kebab y gambas
-<br>
-Selection of tandoori meats: chicken tikka, tandoori chicken, seekh kebab and prawns
-</p>
+  <div class="flex-grow">
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">47.</span> King Prawn Tandoori / Langostinos Tandoori</h4>
+    <p class="text-sm text-gray-600">
+      King prawns marinated in yogurt, aromatic spices and cooked in tandoor
+      <br>
+      Langostinos marinados en yogur, especias aromáticas y cocinados al tandoor
+    </p>
+    <div class="mt-2 space-y-1 text-sm">
+      <div class="flex justify-between"><span>Starter</span> <span>7,25€</span></div>
+      <div class="flex justify-between"><span>Main</span> <span>14,95€</span></div>
+    </div>
+  </div>
 </div>
-<span class="font-bold text-primary">18,95€</span>
-</div>
-</div>
-</div>
+
 <!-- Main Dishes -->
 <div id="mains" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos Principales / Main Dishes</h3>
