--- a/index.html
+++ b/index.html
@@ -806,34 +806,24 @@ Discover the authentic flavors of India with our traditional recipes.
 </div>
 <!-- Main Dishes -->
 <div id="mains" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos Principales / Main Dishes</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">49.</span> Punjabi Curry</h4>
-<p class="text-sm text-gray-600">
-A traditional medium spiced curry
-<br>
-Pedazos frescos de cebolla con salsa curry típica indú
-</p>
-<div class="flex justify-between items-start w-full">
-<div class="flex-grow">
-<div class="grid grid-cols-[1fr_auto] gap-x-8 gap-y-1 text-sm">
-<span>Chicken (Pollo)</span>
-<span class="text-right">9,25 €</span>
-<span>Lamb (Cordero)</span>
-<span class="text-right">10,25 €</span>
-<span>Prawn (Gambas)</span>
-<span class="text-right">10,25 €</span>
-<span>King Prawn (Langostinos)</span>
-<span class="text-right">12,00 €</span>
-<span>Fish (Pescado)</span>
-<span class="text-right">10,25 €</span>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos Principales / Main Dishes</h3>
+  <div class="space-y-6">
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div class="flex-grow">
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">49.</span> Punjabi Curry</h4>
+        <p class="text-sm text-gray-600">
+          A traditional medium spiced curry <br>
+          Curry tradicional de intensidad media
+        </p>
+        <div class="mt-2 space-y-1 text-sm">
+          <div class="flex justify-between"><span>Chicken / Pollo</span> <span>9,25€</span></div>
+          <div class="flex justify-between"><span>Lamb / Cordero</span> <span>10,25€</span></div>
+          <div class="flex justify-between"><span>Prawn / Gamba</span> <span>10,25€</span></div>
+          <div class="flex justify-between"><span>King Prawn / Langostino</span> <span>12,00€</span></div>
+          <div class="flex justify-between"><span>Fish / Pescado</span> <span>10,25€</span></div>
+        </div>
+      </div>
+    </div>
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
 <div>
 <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">50.</span> Karahi</h4>
