--- a/index.html
+++ b/index.html
@@ -804,6 +804,7 @@ Discover the authentic flavors of India with our traditional recipes.
     </div>
   </div>
 </div>
+</div>
 <!-- Main Dishes -->
 <div id="mains" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos Principales / Main Dishes</h3>
